fix scrollable sidebar  on mobile

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -93,6 +93,8 @@ figure {
     div.fixed {
         width: 320px;
         position: fixed;
+        overflow-y: auto;
+
     }
     .vh-sm-100 {
         height: 100vh!important;
